schema/testdata/errors/array_fields_default.keel
model Thing {
    fields {
        //expect-error:31:40:E048:"science" is Text but field texts is Text[]
        texts Text[] @default("science")
        //expect-error:33:44:E048:["science"] is Text[] but field enums is MyEnum[]
        enums MyEnum[] @default(["science"])
        //expect-error:30:41:E048:["science"] is Text[] but field enum is MyEnum
        enum MyEnum @default(["science"])
        //expect-error:28:39:E048:["science"] is Text[] but field text is Text
        text Text @default(["science"])
        //expect-error:32:42:E048:MyEnum.One is MyEnum but field texts2 is Text[]
        texts2 Text[] @default(MyEnum.One)
    }
}

enum MyEnum {
    One
    Two
}